http://trac.rezo.net/trac/spip/changeset/12273#file1 avait casse l'analyse auto des nouveaux sites syndiques

--- a/prive/formulaires/editer_site.html
+++ b/prive/formulaires/editer_site.html
@@ -21,7 +21,7 @@
 		})</div>]
 
 		<ul>
-		[(#ENV{id_syndic}|sinon{#ENV{url_site}}|non)
+		[(#ENV{id_syndic}|intval|sinon{#ENV{url_site}}|non)
 		[(#SESSION{statut}|=={0minirezo}|?{' ',#ENV{config}|table_valeur{proposer_site}|=={oui}|oui})
 			<li class="editer_referencement_automatise">
 			  <fieldset>
