--- a/prive/formulaires/login.html
+++ b/prive/formulaires/login.html
@@ -78,11 +78,13 @@ function informe_auteur(c){
 		// indiquer le cnx si on n'y a pas touche
 		jQuery('input#session_remember:not(.modifie)')
 		.attr('checked',(c.cnx=='1')?'checked':'');
-		jQuery('#spip_logo_auteur').html(c.logo);
 	} else {
-		jQuery('#spip_logo_auteur').html('');
 		alea_actuel = '';
 	}
+	if (c.logo)
+		jQuery('#spip_logo_auteur').html(c.logo);
+	else
+		jQuery('#spip_logo_auteur').html('');
 	affiche_login_secure();
 }
 function calcule_md5_pass(pass){
@@ -96,7 +98,8 @@ function actualise_auteur(){
 	if (login != jQuery('#var_login').attr('value')) {
 		informe_auteur_en_cours = true;
 		login = jQuery('#var_login').attr('value');
-		jQuery.get('#URL_ACTION{informer_auteur}',{var_login:login},informe_auteur);
+		var currentTime = new Date();// on passe la date en var pour empecher la mise en cache de cette requete (bug avec FF3 & IE7)
+		jQuery.get('#URL_PAGE{informer_auteur}',{var_login:login,var_compteur:currentTime.getTime()},informe_auteur);
 	}
 }
 jQuery('#password')
