--- a/prive/rss/revisions.html
+++ b/prive/rss/revisions.html
@@ -1,5 +1,5 @@
 #HTTP_HEADER{Content-Type: text/xml; charset=#CHARSET}#CACHE{900}<BOUCLE0(AUTEURS){tout}{id_auteur=#ENV{id}}{lang_select}><?php
-if ([(#ID_AUTEUR|verifier_low_sec{#ENV{cle}, #ENV{op}, #ENV{args}}|?{1,0})]) {
+if ([(#ID_AUTEUR|securiser_acces{#ENV{cle},rss,#ENV{op}, #ENV{args}}|?{1,0})]) {
 ?><?xml version="1.0" encoding="#CHARSET" ?>
 
 <rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:thr="http://purl.org/syndication/thread/1.0">
@@ -17,7 +17,7 @@ if ([(#ID_AUTEUR|verifier_low_sec{#ENV{cle}, #ENV{op}, #ENV{args}}|?{1,0})]) {
 		<dc:format>text/html</dc:format>
 		[<dc:language>(#LANG|texte_backend)</dc:language>]
 		<dc:creator>[(#NOM|texte_backend)][ &lt;(#EMAIL|texte_backend)&gt;]</dc:creator>
-		<description>[(#ID_ARTICLE|revisions_diff{#ID_VERSION})]</description>
+		<description>[(#ID_ARTICLE|revisions_diff{#ID_VERSION}|texte_backend)]</description>
 	</item></BOUCLE_RSS>
 </channel>
 </rss><?php
