--- a/prive/rss/signatures.html
+++ b/prive/rss/signatures.html
@@ -1,13 +1,13 @@
 #HTTP_HEADER{Content-Type: text/xml; charset=#CHARSET}#CACHE{900}<BOUCLE0(AUTEURS){tout}{id_auteur=#ENV{id}}{lang_select}><?php
-if ([(#ID_AUTEUR|verifier_low_sec{#ENV{cle}, #ENV{op}, #ENV{args}}|?{1,0})]) {
+if ([(#ID_AUTEUR|securiser_acces{#ENV{cle},rss,#ENV{op}, #ENV{args}}|?{1,0})]) {
 ?><?xml version="1.0" encoding="#CHARSET" ?>
 
 <rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:thr="http://purl.org/syndication/thread/1.0">
-<channel xml:lang="[(#ENV{lang}|texte_backend)]">
+<channel xml:lang="[(#LANG|texte_backend)]">
 	<title>[&#91;(#NOM_SITE_SPIP|texte_backend)&#93;] RSS (<:titre_suivi_petition|texte_backend:>)</title>
 	<link>[(#URL_ECRIRE{controle_petition}|url_absolue|texte_backend)]</link>
 	<description></description>
-	<language>[(#ENV{lang}|texte_backend)]</language>
+	<language>[(#LANG|texte_backend)]</language>
 <BOUCLE_RSS(SIGNATURES){!par date}{0,50}
  ><BOUCLE_A(ARTICLES){id_article}>
 	<item>
